[package]
name = "honey_expand"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
honey = { path = ".." }
yew = { git = "https://github.com/yewstack/yew.git", rev="421b4e1f608e6d648dcf571157b081fcbd886996", features = ["csr"] }
cobul = { git = "https://github.com/tdooms/cobul.git", features = ["extensions", "simple"] }
ywt = { git = "https://github.com/tdooms/ywt.git" }
validator = { version = "0.16", features = ["derive"] }
